# vfs2db

./: .gitignore  CMakeLists.txt  README.md  initdb.py  main.c
db_handler/: db_handler.c  db_handler.h
src/: CMakeLists.txt  main.c  run.sh
src/db_handler/: db_handler.c  db_handler.h  query_manager.c  query_manager.h
src/modules/db_handler/: CMakeLists.txt
src/modules/db_handler/include/: db_handler.h
src/modules/query_manager/: CMakeLists.txt
src/modules/query_manager/include/: query_manager.h
src/modules/query_manager/src/: query_manager.c
src/modules/syscall_handler/: CMakeLists.txt
src/modules/syscall_handler/include/: syscall_handler.h
src/modules/utils/: CMakeLists.txt
src/modules/utils/include/: errors.h  types.h
src/syscall_handler/: syscall_handler.c  syscall_handler.h
src/utils/: const.h  types.h
syscall_handler/: syscall_handler.c  syscall_handler.h
